@@ -8,6 +8,10 @@
 maint jit dump
   Dump an in-memory JIT object into a file.
 
+set|show scheduler-locking-eval (on|off)
+  The new setting allows a user to lock scheduler during inferior calls.
+  It can be set in parallel to scheduler-locking step or replay mode.
+
 *** Changes in GDB 13
 
 * MI version 1 is deprecated, and will be removed in GDB 14.
